--- a/settings_page/settings_style.css
+++ b/settings_page/settings_style.css
@@ -74,6 +74,7 @@ hr {
   position: relative;
   background-color: white;
   width: 100%;
+  height: 13em;
   padding: 1.5rem;
   border-radius: 0.5em;
   -webkit-box-shadow: 0px 1px 1px 1px rgba(0, 0, 0, 0.3);
