--- a/settings_page/settings_style.css
+++ b/settings_page/settings_style.css
@@ -87,7 +87,7 @@ hr {
   gap: 1rem;
   color: var(--gray-400);
   font-size: 1.2rem;
-  margin-top: 1rem;
+  margin-top: 2em;
 }
 
 .address-book button.add {
@@ -114,7 +114,7 @@ hr {
   }
 
   .address-book .address p {
-    line-height: 1.5rem;
+    padding: 0.4em 0;
   }
 }
 
