--- a/global.css
+++ b/global.css
@@ -317,8 +317,8 @@ nav .extra-links .nav-address-book {
   background-image: url(./assets/icons/nav_address_book.png);
 }
 
-nav .extra-links .nav-settings {
-  background-image: url(./assets/icons/nav_settings.png);
+nav .extra-links .nav-profile {
+  background-image: url(./assets/icons/nav_profile.png);
 }
 
 nav .sign {
