--- a/cart_page/cart_style.css
+++ b/cart_page/cart_style.css
@@ -18,6 +18,7 @@ h2 {
   color: rgba(0, 0, 0, 0.1);
 }
 
+/* Cart Items -------------------------------------------------------- */
 .cart .cart-items {
   width: 100%;
   display: flex;
@@ -48,7 +49,7 @@ h2 {
 
 .cart .cart-items > .item {
   width: 100%;
-  height: 100%;
+  height: clamp(11rem, 22vw, 15em);;
   display: flex;
   gap: 1.5em;
   position: relative;
@@ -56,7 +57,7 @@ h2 {
 
 .cart .cart-items > .item .img-container {
   width: clamp(9rem, 22vw, 13em);
-  min-height: clamp(9rem, 22vw, 13em);
+  height: 100%;
 }
 
 .cart .cart-items > .item img {
@@ -98,6 +99,23 @@ h2 {
   font-size: 1.2em;
 }
 
+.cart .cart-items > .item .cooktime {
+  position: absolute;
+  top: 2.2em;
+  right: 0;
+  font-size: 1em;
+  color: black;
+  font-weight: 500;
+  display: flex;
+  align-items: center;
+  gap: 0.4em;
+}
+
+.cart .cart-items > .item .cooktime img {
+  height: 1.1em;
+  object-fit: contain;
+}
+
 .cart .cart-items > .item .delete {
   display: flex;
   gap: 0.5em;
@@ -128,7 +146,9 @@ h2 {
 .cart .cart-items > .item .delete button:hover {
   background-color: rgba(0, 0, 0, 0.05);
 }
+/* ----------------------------------------------------------------- */
 
+/* Address List ---------------------------------------------------- */
 .cart .address-list {
   width: 100%;
   display: flex;
@@ -166,7 +186,9 @@ h2 {
   width: clamp(1.2em, 2vw, 1.6em);
   height: clamp(1.2em, 2vw, 1.6em);
 }
+/* -------------------------------------------------------------------- */
 
+/* Extra Information -------------------------------------------------- */
 .cart .extra-info {
   display: flex;
   flex-direction: column;
@@ -194,7 +216,9 @@ h2 {
     white-space: nowrap;
   }
 }
+/* ----------------------------------------------------------------- */
 
+/* Price ----------------------------------------------------------- */
 .cart .money {
   width: 100%;
   background-color: white;
@@ -236,6 +260,7 @@ h2 {
   font-size: 1em;
   font-weight: 700;
 }
+/* ------------------------------------------------------------------ */
 
 .cart input[type="submit"] {
   align-self: flex-end;
@@ -247,5 +272,4 @@ h2 {
   .cart input[type="submit"] {
     width: fit-content;
   }
-  
 }
