--- a/order_history_page/order_style.css
+++ b/order_history_page/order_style.css
@@ -27,7 +27,7 @@
   display: flex;
   flex-direction: column;
   justify-content: space-between;
-  gap: 2em;
+  gap: 1em;
   font-size: 0.95rem;
 
   -webkit-box-shadow: 0px 2px 5px 2px rgba(0, 0, 0, 0.1);
@@ -43,6 +43,16 @@
 
 .order-history .order h2 {
   font-size: 1.2em;
+  color: var(--primary-900);
+}
+
+.order-history .order p {
+  color: var(--gray-600);
+}
+
+.order-history .info {
+  display: flex;
+  justify-content: space-between;
 }
 
 .order-history .order .status {
@@ -53,9 +63,27 @@
   color: white;
 }
 
+.order-history .order ul {
+  list-style: none;
+  display: flex;
+  flex-direction: column;
+  gap: 0.3em;
+}
+
+@media (min-width: 600px) {
+  .order-history .order ul{
+    flex: 1 1 0;
+  }
+}
+
+.order-history .order li {
+  display: flex;
+  gap: 0.3em;
+  align-items: center;
+  font-size: 0.9em;
+}
+
 .order-history .order div:last-of-type button {
-    font-size: 1.1em;
-    font-weight: 700;
     height: 2em;
     background-color: transparent;
     border-style: none;
@@ -64,41 +92,22 @@
 }
 
 .order-history .order div:last-of-type button img {
-  width: 1.8em;
-  height: 1.8em;
+  width: 1.5em;
+  height: 1.5em;
 }
 
-
-.order-history .order div:last-of-type .details {
-    color: var(--info);
-}
-
-.order-history .order div:last-of-type .re-order {
+.order-history .order div:last-of-type .re-order,
+.order-history .order div:last-of-type .price {
     color: var(--primary-500);
+    font-weight: 600;
+    font-size: 1.1em;
+    font-weight: 700;
 }
 
 .order-history .order div:nth-of-type(2) {
   color: var(--gray-600);
 }
 
-.order-history .order div:nth-of-type(2) .address {
-  display: flex;
-  gap: 0.6em;
-  align-items: flex-start;
-}
-
-.order-history .order div:nth-of-type(2) .address > span {
-  white-space: nowrap;
-  font-weight: 600;
-}
-
-.order-history .order div:nth-of-type(2) .address > p {
-  line-height: 1.2em;
-}
-
-.order-history .order div:nth-of-type(2) .address span.name {
-  font-weight: 600;
-}
 
 .order-history .order div:nth-of-type(2) .address .text {
   display: flex;
@@ -107,13 +116,6 @@
   margin-right: 3em;
 }
 
-.order-history .order div:nth-of-type(2) hr {
-  margin: 1em 0;
+.order-history .order hr {
   color: rgba(0, 0, 0, 0.2);
-}
-
-@media (min-width: 600px) {
-  .order-history .order div:nth-of-type(2) .address > p {
-    line-height: 1.5em;
-  }
 }
