--- a/global.css
+++ b/global.css
@@ -535,15 +535,7 @@ footer .copyright {
   font-size: 0.9em;
 }
 
-.popup.error {
-  background-color: rgba(218, 111, 111, 0.801);
-  border-color: rgba(218, 58, 58, 0.8);
-  color: rgb(19, 0, 0);
-}
-
-.popup.success {
-  background-color: rgba(98, 201, 84, 0.801);
-  border-color: rgba(60, 179, 30, 0.8);
-  color: rgb(4, 19, 0);
+.popup button:hover {
+  color: white;
 }
 /* ------------------------------------------- */
