--- a/sign_in_page/sign.css
+++ b/sign_in_page/sign.css
@@ -1,3 +1,11 @@
+/* autocomplete background color set to white on chrome */
+input:-webkit-autofill,
+input:-webkit-autofill:hover, 
+input:-webkit-autofill:focus, 
+input:-webkit-autofill:active{
+    -webkit-box-shadow: 0 0 0 30px white inset !important;
+}
+
 section {
   display: flex;
   flex-direction: column;
