item card details slide in and slide out animations added

--- a/global.css
+++ b/global.css
@@ -581,3 +581,29 @@ footer .copyright {
   color: white;
 }
 /* ------------------------------------------- */
+
+@keyframes slide-in {
+  from {
+    transform: translateY(100%);
+  }
+  to {
+    transform: translateY(0);
+  }
+}
+
+.slide-in {
+  animation: slide-in 0.15s ease-in;
+}
+
+@keyframes slide-out {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(100%);
+  }
+}
+
+.slide-out {
+  animation: slide-out 0.15s ease-out;
+}
