--- a/home_page/home.css
+++ b/home_page/home.css
@@ -1,3 +1,13 @@
+h2.title {
+  color: var(--primary-900);
+  margin-bottom: 2em;
+  padding: 0 1em;
+  border-style: none none none solid;
+  border-width: 4px;
+  border-color: var(--primary-500);
+  align-self: flex-start;
+}
+
 /* carousel ---------------------------------- */
 .slider-wrapper {
   width: 100%;
@@ -328,3 +338,125 @@
   }
 }
 /* -------------------------------------------- */
+
+/* reviews -------------------------------------*/
+.reviews {
+  position: relative;
+}
+
+.reviews h2 {
+  margin-bottom: 1.5em;
+}
+
+.reviews .reviews-list {
+  position: relative;
+  scrollbar-width: none; /* Hide the scrollbar */
+  overflow-x: scroll;
+  white-space: nowrap;
+  padding: 1em 0;
+}
+
+.reviews .review-card {
+  display: inline-block;
+  width: 27em;
+  height: 12.2em;
+  padding: 1.2em;
+  background-color: white;
+  white-space: normal;
+  border-radius: 10px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2);
+  margin-right: 2em;
+  cursor: default;
+  transition: transform 0.2s ease-in-out;
+}
+
+.reviews .review-card:hover {
+  transform: translateY(-5%);
+}
+
+.reviews .review-card .stars {
+  display: flex;
+  gap: 0.3em;
+  justify-self: flex-end;
+}
+
+.reviews .review-card .star {
+  display: inline-block;
+  width: 1em;
+  height: 1em;
+}
+
+.reviews .review-card .content {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.reviews .review-card p {
+  color: var(--gray-600);
+}
+
+.reviews .bottom {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.reviews .user {
+  display: flex;
+  width: 100%;
+  gap: 1em;
+  align-items: center;
+  color: var(--gray-700);
+  font-weight: 800;
+}
+
+.reviews .user span {
+  font-size: 1.1em;
+}
+
+.reviews .img-container {
+  width: 3em;
+  height: 3em;
+  border-radius: 50%;
+}
+
+.reviews .img-container img {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  object-fit: cover;
+}
+
+.reviews .scroll-btn {
+  display: block;
+  position: absolute;
+  top: 50%;
+  transform: translateY(-50%);
+  width: 4rem;
+  height: 4rem;
+  border: none;
+  background-color: var(--primary-400);
+  border-radius: 50%;
+  cursor: pointer;
+  z-index: 5;
+  transition: opacity 0.05s ease-in-out;
+
+  background-repeat: no-repeat;
+  background-position: center;
+  background-size: 70%;
+}
+
+.reviews .scroll-left {
+  left: -1em;
+  background-image: url(./../assets/icons/arrow_left.png);
+}
+
+.reviews .scroll-right {
+  right: -1em;
+  background-image: url(./../assets/icons/arrow_right.png);
+}
+
+/* reviews -------------------------------------*/
