--- a/order_page/order.css
+++ b/order_page/order.css
@@ -91,7 +91,7 @@
   position: relative;
   height: clamp(200px, 45vw, 550px);
   border-radius: 2rem;
-  background: url(./../assets/order/pattern3.jpg);
+  background: url(/./../assets/order/pattern3.jpg);
   background-repeat: repeat;
   overflow: hidden;
   padding-left: 1.5rem;
