--- a/global.css
+++ b/global.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Manrope:wght@200;300;400;500;600;700;800&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@100;200;300;400;500;600;700;800;900&display=swap');
 
 :root {
   --primary-200: #ffab3d;
@@ -23,6 +24,7 @@
   --info: #158fff;
   --bg: #f4f4f4;
   --font: "Manrope", sans-serif;
+  --font2: 'Lexend Deca', sans-serif;
   --max-width: 1300px;
 }
 
