--- a/home_page/home.css
+++ b/home_page/home.css
@@ -1,11 +1,24 @@
 h2.title {
   color: var(--primary-900);
-  margin-bottom: 2em;
-  padding: 0 1em;
+  margin-bottom: 1em;
+  padding: 0 0.8em;
   border-style: none none none solid;
   border-width: 4px;
   border-color: var(--primary-500);
   align-self: flex-start;
+  font-family: var(--font2);
+  font-size: 1.6rem;
+  letter-spacing: -1px;
+}
+
+@media (min-width: 600px) {
+  h2.title {
+    margin-bottom: 2em;
+  }
+}
+
+section {
+  margin: 1.5rem 0;
 }
 
 /* carousel ---------------------------------- */
@@ -178,6 +191,38 @@ h2.title {
 /* ------------------------------------------- */
 
 /* contact us ---------------------------------- */
+.about-us {
+  display: flex;
+  flex-direction: column-reverse;
+  gap: 2em;
+}
+
+.about-us > * {
+  flex: 1 1 0;
+}
+
+.about-us iframe {
+  min-height: clamp(200px, 45vw, 550px);
+}
+
+.about-us p {
+  color: var(--gray-700);
+  text-align: justify;
+}
+
+@media (min-width: 800px) {
+  .about-us {
+    flex-direction: row;
+  }
+
+  .about-us iframe {
+    min-height: clamp(10em, 25vw, 19.5em);
+  }
+}
+
+/* ---------------------------------------------- */
+
+/* contact us ---------------------------------- */
 .contact-us {
   width: 100%;
   display: flex;
@@ -204,7 +249,9 @@ h2.title {
 .contact-us h2 {
   font-size: 2em;
   color: var(--primary-500);
-  margin-bottom: 0.2em;
+  margin-bottom: 0.3em;
+  font-family: var(--font2);
+  letter-spacing: -1px;
 }
 
 .contact-us p {
@@ -212,7 +259,7 @@ h2.title {
 }
 
 .contact-us a {
-  margin-top: 1em;
+  margin-top: 1.1em;
   padding: 0.6em 1em;
   font-size: 0.8em;
   border-radius: 5px;
@@ -442,11 +489,16 @@ h2.title {
   border-radius: 50%;
   cursor: pointer;
   z-index: 5;
-  transition: opacity 0.05s ease-in-out;
+  transition: opacity 0.05s ease-in-out, transform ease-in-out 0.1s;
 
   background-repeat: no-repeat;
   background-position: center;
   background-size: 70%;
+}
+
+.reviews .scroll-btn:hover {
+  filter: brightness(110%);
+  transform: scale(1.05) translateY(-50%);
 }
 
 .reviews .scroll-left {
@@ -457,6 +509,12 @@ h2.title {
 .reviews .scroll-right {
   right: -1em;
   background-image: url(./../assets/icons/arrow_right.png);
+}
+
+@media (pointer: coarse) {
+  .reviews .scroll-btn {
+    display: none !important;
+  }
 }
 
 /* reviews -------------------------------------*/
