--- a/order_page/order.css
+++ b/order_page/order.css
@@ -300,16 +300,25 @@
 }
 
 .food-card h3, .food-card h4 {
+  position: relative;
+  width: fit-content;
   opacity: 100%;
   transform: scaleY(1);
   transition: transform 200ms ease, opacity 200ms;
 }
 
-
 .food-card:hover h3, .food-card:hover h4 {
   opacity: 0%;
   transform: scaleY(0);
   transition: transform 200ms ease, opacity 200ms;
+}
+
+.food-card h4::before {
+  content: '$';
+  position: absolute;
+  font-size: 0.7em;
+  top: 0;
+  right: -0.7em;
 }
 
 .food-card button.view {
@@ -515,8 +524,18 @@
 }
 
 .food-details .details h4 {
+  position: relative;
+  width: fit-content;
   font-size: 1.8em;
   color: var(--primary-500);
+}
+
+.food-details .details h4::before {
+  content: '$';
+  position: absolute;
+  font-size: 0.7em;
+  top: 0;
+  left: -0.7em;
 }
 
 .food-details .details h5 {
