--- a/global.css
+++ b/global.css
@@ -156,6 +156,21 @@ p.margin {
   margin-bottom: 2rem;
 }
 
+.spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translateX(-50%) translateY(-50%);
+  z-index: 20;
+  pointer-events: none;
+}
+
+.spinner img {
+  width: 100%;
+  height: 100%;
+  object-fit: contain;
+}
+
 /* nav ------------------------------------- */
 .empty {
   width: 100vw;
