--- a/contact_page/contact.css
+++ b/contact_page/contact.css
@@ -1,17 +1,6 @@
-h2 {
-  color: var(--primary-900);
-  margin-bottom: 1em;
-  padding: 0 1em;
-  border-style: none none none solid;
-  border-width: 4px;
-  border-color: var(--primary-500);
-  align-self: flex-start;
-}
-
 header {
   position: relative;
-  width: 100%;
-  height: clamp(200px, 38vw, 550px);
+  height: clamp(200px, 40vw, 550px);
   border-radius: 5px;
   border: solid 1px var(--gray-50);
   margin-bottom: 2em;
@@ -29,7 +18,7 @@ header p {
   left: 50%;
   top: 50%;
   transform: translateX(-50%) translateY(-50%);
-  font-size: clamp(1.5em, 2.5vw, 2em);;
+  font-size: clamp(1.5em, 2.5vw, 2em);
   color: white;
   font-weight: 800;
   text-shadow: 1px 1px black;
@@ -71,4 +60,69 @@ form {
   form {
     padding: 3rem;
   }
+}
+
+.faq .collapsible {
+  position: relative;
+  background-color: white;
+  color: #444;
+  cursor: pointer;
+  padding: 1.3em;
+  width: 100%;
+  border: none;
+  text-align: left;
+  outline: none;
+  font-size: 1em;
+}
+
+.faq .active,
+.faq .collapsible:hover {
+  background-color: var(--gray-100);
+}
+
+.faq .collapsible:after {
+  content: "";
+  position: absolute;
+  top: 50%;
+  right: 1.3em;
+  transform: translateY(-50%);
+  width: 2.2em;
+  height: 2.2em;
+  background-image: url(/./assets/icons/expand_left.png);
+  background-repeat: no-repeat;
+  background-size: 100%;
+  background-position: center;
+  filter: brightness(0.5) grayscale(100%);
+  transition: transform 0.2s ease;
+}
+
+.faq .content {
+  font-size: 0.9em;
+  padding: 0 1.3em;
+  background-color: white;
+  max-height: 0;
+  overflow: hidden;
+  transition: all 0.2s ease-out;
+}
+
+.faq .active:after {
+  transform: translateY(-50%) rotate(-90deg);
+}
+
+.faq .active + .content {
+  padding: 1em 1.3em;
+  max-height: 1000px;
+  transition: all 0.2s ease-out;
+}
+
+.faq ul {
+  list-style: none;
+}
+
+.faq li button {
+  font-size: 2em;
+}
+
+.faq li:not(:last-of-type) {
+  margin-bottom: 1em;
 }
