--- a/home_page/home.css
+++ b/home_page/home.css
@@ -1,33 +1,17 @@
-h2.title {
-  color: var(--primary-900);
-  margin-bottom: 1em;
-  padding: 0 0.8em;
-  border-style: none none none solid;
-  border-width: 4px;
-  border-color: var(--primary-500);
-  align-self: flex-start;
-  font-family: var(--font2);
-  font-size: 1.6rem;
-  letter-spacing: -1px;
-}
-
 @media (min-width: 600px) {
   h2.title {
     margin-bottom: 2em;
   }
 }
 
-section {
-  margin: 1.5rem 0;
-}
-
 /* carousel ---------------------------------- */
 .slider-wrapper {
-  width: 100%;
   position: relative;
   overflow: hidden;
   background-color: rgb(255, 255, 255);
   border-radius: 5px;
+  padding: 0;
+  margin-top: 2.2rem !important;
 }
 
 .slides-container {
@@ -221,6 +205,7 @@ section {
 @media (min-width: 800px) {
   .about-us {
     flex-direction: row;
+    justify-content: space-between;
   }
 
   .about-us iframe {
@@ -231,7 +216,6 @@ section {
 
 /* contact us ---------------------------------- */
 .contact-us {
-  width: 100%;
   display: flex;
   flex-direction: column;
   justify-content: space-between;
@@ -286,7 +270,6 @@ section {
 /* app ---------------------------------------- */
 .app {
   position: relative;
-  width: 100%;
   height: clamp(200px, 45vw, 550px);
   border-radius: 5px;
   font-size: 1rem;
@@ -353,7 +336,6 @@ section {
 /* hiting--------------------------------------- */
 .hiring {
   position: relative;
-  width: 100%;
   height: clamp(200px, 45vw, 550px);
   border-radius: 5px;
   font-size: 0.7rem;
@@ -396,10 +378,14 @@ section {
 /* reviews -------------------------------------*/
 .reviews {
   position: relative;
+  margin: 0 !important;
+  width: 100% !important;
+  max-width: none;
 }
 
 .reviews h2 {
-  margin-bottom: 1.5em;
+  margin: 0 var(--page-x-margin);
+  margin-bottom: clamp(1rem, 2vw , 2rem);
 }
 
 .reviews .reviews-list {
@@ -407,7 +393,7 @@ section {
   scrollbar-width: none; /* Hide the scrollbar */
   overflow-x: scroll;
   white-space: nowrap;
-  padding: 1em 0;
+  padding: 1em var(--page-x-margin);
 }
 
 .reviews .review-card {
@@ -509,12 +495,12 @@ section {
 }
 
 .reviews .scroll-left {
-  left: -1em;
+  left: var(--page-x-margin);
   background-image: url(./../assets/icons/arrow_left.png);
 }
 
 .reviews .scroll-right {
-  right: -1em;
+  right: var(--page-x-margin);
   background-image: url(./../assets/icons/arrow_right.png);
 }
 
