--- a/home_page/home.css
+++ b/home_page/home.css
@@ -15,7 +15,7 @@
 }
 
 .slides-container {
-  height: clamp(200px, 45vw, 550px);
+  height: var(--section-height);
   width: 100%;
   display: flex;
   list-style: none;
@@ -193,8 +193,8 @@
 
 .about-us iframe {
   width: 100%;
-  min-height: clamp(250px, 45vw, 550px);
-  max-height: 550px;
+  min-height: calc(var(--section-height) + 2rem);
+  max-height: calc(var(--section-height) + 2rem);
 }
 
 .about-us p {
@@ -209,7 +209,7 @@
   }
 
   .about-us iframe {
-    min-height: clamp(10em, 25vw, 19.5em);
+    min-height: calc((var(--section-height) / 2))
   }
 }
 /* ---------------------------------------------- */
@@ -228,7 +228,7 @@
 }
 
 .contact-us > div img {
-  height: clamp(200px, 45vw, 550px);
+  height: var(--section-height);
   width: 100%;
   max-width: 100%;
   max-height: 100%;
@@ -262,7 +262,8 @@
   }
 
   .contact-us > div img {
-    height: clamp(120px, 23.5vw, 295px);
+    min-height: calc(var(--section-height) / 2);
+    max-height: calc(var(--section-height) / 2);
   }
 }
 /* -------------------------------------------- */
@@ -270,7 +271,7 @@
 /* app ---------------------------------------- */
 .app {
   position: relative;
-  height: clamp(200px, 45vw, 550px);
+  height: var(--section-height);
   border-radius: 5px;
   font-size: 1rem;
 
@@ -336,7 +337,7 @@
 /* hiting--------------------------------------- */
 .hiring {
   position: relative;
-  height: clamp(200px, 45vw, 550px);
+  height: var(--section-height);
   border-radius: 5px;
   font-size: 0.7rem;
 
